--- a/Parts/cBBp_Dragon_Trunk/part.cfg
+++ b/Parts/cBBp_Dragon_Trunk/part.cfg
@@ -7,6 +7,8 @@ PART
 
 	// --- asset parameters ---
 	mesh = model.mu
+	scale = 1
+	rescaleFactor = 1.0
 
 	// --- node definitions ---
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
