Moved stuff around

--- a/Parts/cBBp_Dragon_Trunk/part.cfg
+++ b/Parts/cBBp_Dragon_Trunk/part.cfg
@@ -30,6 +30,10 @@ PART
 	attachRules = 1,0,1,1,1
 	stackSymmetry = 1
 
+	// --- effects
+	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
+	sound_decoupler_fire = decouple
+
 	// --- tech tree parameters
 	TechRequired = veryHeavyRocketry
 	entryCost = 500
