Updated RCS effects
running effect used for RCS and main engine. Latter should switch to different loop

--- a/Parts/cBBp_Dragon_Capsule/part.cfg
+++ b/Parts/cBBp_Dragon_Capsule/part.cfg
@@ -119,31 +119,53 @@ PART
 
 	MODULE
 	{
-		name = ModuleRCS
-		thrusterTransformName = RCSthruster
-		thrusterPower = 0
-		isJustForShow = true
-		resourceName = MonoPropellant
-		fxOffset = 0, -39.3, 0
-		atmosphereCurve
-		{
-			key = 0 260
-			key = 1 100
-		}
-	}
-
-	MODULE
-	{
-		name = ModuleRCS
+		name = ModuleRCSFX
+		stagingEnabled = False
 		thrusterTransformName = RCSthruster
 		thrusterPower = 1
+		// fxOffset = 0, -39.3, 0
+		//fxOffset = 1e5, 1e5, 1e5
+
 		resourceName = MonoPropellant
-		fxOffset = 1e5, 1e5, 1e5
+		resourceFlowMode = STAGE_PRIORITY_FLOW
+		runningEffectName = running
 		atmosphereCurve
 		{
 			key = 0 260
 			key = 1 100
+			key = 4 0.001
 		}
+	}
+	
+	EFFECTS
+	{
+		running
+		{
+			AUDIO_MULTI_POOL
+			{
+				channel = Ship
+				transformName = RCSthruster
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.02 0.1
+				volume = 0.5 0.1
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = RCSthruster
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}		
 	}
 
 	RESOURCE
@@ -152,30 +174,57 @@ PART
 		amount = 250
 		maxAmount = 500
 	}
-
+	
+//    MODULE
+//	{
+//		name = ModuleEngines
+//		thrustVectorTransformName = thrustTransform
+//		exhaustDamage = True
+//		ignitionThreshold = 0.1
+//		minThrust = 0
+//		maxThrust = 150
+//		heatProduction = 100
+//		//fxOffset = 0, 0, 0.21
+//		EngineType = LiquidFuel
+//		exhaustDamageDistanceOffset = 0.34
+//		PROPELLANT
+//		{
+//			name = MonoPropellant
+//			ratio = 1.0
+//			DrawGauge = True
+//		}
+//		atmosphereCurve
+//		{
+//			key = 0 290
+//			key = 1 250
+//			key = 3 0.001
+//		}
+//	}
 
 	MODULE
 	{
-		name = ModuleEngines
+		name = ModuleEnginesFX
 		thrustVectorTransformName = thrustTransform
-		exhaustDamage = False
+		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust = 250
-		heatProduction = 200
-		fxOffset = 0, 0, 0
+		maxThrust = 150
+		heatProduction = 100
+		//fxOffset = 0, 0, 0.125
+		EngineType = LiquidFuel
+		exhaustDamageDistanceOffset = 0.34
 		PROPELLANT
 		{
 			name = MonoPropellant
-			ratio = 1
+			ratio = 1.0
 			DrawGauge = True
 		}
 		atmosphereCurve
 		{
-		 key = 0 290
-		 key = 1 250
+			key = 0 290
+			key = 1 250
+			key = 7 0.001
 		}
-
 	}
 
 	MODULE
@@ -184,6 +233,16 @@ PART
 		gimbalTransformName = thrustTransform
 		gimbalRange = 0.5
 	}
+
+	//MODULE
+	//{
+	//	name = ModuleSurfaceFX
+	//	thrustProviderModuleIndex = 0
+	//	fxMax = 0.3
+	//	maxDistance = 30
+	//	falloff = 1.7
+	//	thrustTransformName = thrustTransform
+	//}
 
 	MODULE
 	{
