--- a/Parts/cBBp_Dragon_Capsule/part.cfg
+++ b/Parts/cBBp_Dragon_Capsule/part.cfg
@@ -139,6 +139,7 @@ PART
 	
 	EFFECTS
 	{
+		// rcs effect
 		running
 		{
 			AUDIO_MULTI_POOL
@@ -165,7 +166,46 @@ PART
 				speed = 1.0 1.0
 				localRotation = -90, 0, 0
 			}
-		}		
+		}	
+		
+		// engine effect
+		running_closed
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 1.0 0.3
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.4 0.8
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				//localOffset = 0, 0, 1
+				localPosition = 0, 0, 0.08
+			}
+		}
+		
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}	
 	}
 
 	RESOURCE
@@ -213,6 +253,7 @@ PART
 		//fxOffset = 0, 0, 0.125
 		EngineType = LiquidFuel
 		exhaustDamageDistanceOffset = 0.34
+		runningEffectName = running_closed
 		PROPELLANT
 		{
 			name = MonoPropellant
