--- a/Parts/cBBp_Dragon_Capsule/part.cfg
+++ b/Parts/cBBp_Dragon_Capsule/part.cfg
@@ -6,9 +6,13 @@ PART
 	author = cBBp
 
 	// --- asset parameters ---
-	mesh = model.mu
+	MODEL
+	{
+		model = cBBp_Dragon/Parts/cBBp_Dragon_Capsule/model
+		scale = 1.0, 1.0, 1.0
+	}
 	scale = 1
-	rescaleFactor = 1.0
+	rescaleFactor = 1
 
 	// --- node definitions ---
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
@@ -18,8 +22,8 @@ PART
 	node_stack_trunk = 0.0, -0.6316727, 0.0, 0.0, -1.0, 0.0, 2
 
 	// --- effects
-	fx_exhaustFlame_yellow = 0.0, -5, 0.0, 0.0, 1.0, 0.0, running
-	fx_exhaustLight_yellow = 0.0, -5, 0.0, 0.0, 0.0, 1.0, running
+	fx_exhaustFlame_yellow = 0.0, -5, 0.0, 0.0, 1.0, -1.5, running
+	fx_exhaustLight_yellow = 0.0, -5, 0.0, 0.0, 0.0, -1.0, running
 	fx_gasBurst_white = 0.0, 0.0650517, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_vent_large = decouple
 
@@ -124,7 +128,7 @@ PART
 		thrusterTransformName = RCSthruster
 		thrusterPower = 1
 		// fxOffset = 0, -39.3, 0
-		//fxOffset = 1e5, 1e5, 1e5
+		fxOffset = 0, 0, -50
 
 		resourceName = MonoPropellant
 		resourceFlowMode = STAGE_PRIORITY_FLOW
@@ -164,6 +168,7 @@ PART
 				emission = 1.0 1.0
 				speed = 0.0 0.8
 				speed = 1.0 1.0
+				//localPosition = 0, 0, 0.1
 				localRotation = -90, 0, 0
 			}
 		}	
